<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homePageFragment"
        android:icon="@drawable/menu_home"
        android:title="@string/home" />

    <item
        android:id="@+id/categoriesFragment"
        android:icon="@drawable/menu_category"
        android:title="@string/categories" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
        android:title="@string/lists" />

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/menu_cart"
        android:title="@string/cart" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/menu_profile"
        android:title="@string/profile" />


</menu>